Fix Slider Text Alignment On Mobile View

--- a/Santa Ana/css-cheats.css
+++ b/Santa Ana/css-cheats.css
@@ -11,7 +11,12 @@
 /****************END**********************/
 
 
-
+/*Fix the slider text alignment on mobile view*/
+@media only screen and (max-width: 500px){
+    .slider__text.align-left {
+    margin-left: 0px;
+    }
+}
 
 
 
